--- a/app/src/main/res/layout/manual_recording_item.xml
+++ b/app/src/main/res/layout/manual_recording_item.xml
@@ -1,20 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="120dp">
+    android:layout_height="100dp">
 
     <ImageView
         android:id="@+id/manual_recording_thumbnail"
-        android:layout_width="120dp"
-        android:layout_height="match_parent" />
-
-    <TextView
-        android:id="@+id/manual_recording_date"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="20dp"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:text="2017/05/05"/>
+        android:layout_marginLeft="10dp"
+        android:layout_weight="2"/>
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/manual_recording_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:text="Video Name"/>
+
+        <TextView
+            android:id="@+id/manual_recording_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/manual_recording_date"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="15dp"
+            android:text="Video Description"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
